# Localiza-o-Robotica

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: ekf_odom.yaml  ekf_odom_imu.yaml  ekf_odom_imu_gps.yaml
launch/: localization.launch  record_trajectory.launch  replay_bag.launch  run_all_tests.launch
scripts/: compare_results.py  gps_to_odom.py  gt_odom_publisher.py  localization_metrics.py  run_replay.sh
