<?xml version="1.0"?>
<package format="2">
  <name>localiza_o_robotica</name>
  <version>0.1.0</version>
  <description>Comparacao de localizacao do Husky com odometria, IMU e GPS usando Filtro de Kalman.</description>

  <maintainer email="ros@example.com">ROS User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export/>
</package>
